fixed slide width overflow for good

--- a/public/components/slide/css/slide.css
+++ b/public/components/slide/css/slide.css
@@ -26,6 +26,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .slide-editor > * {
@@ -63,6 +64,7 @@ legend {
     padding: 1em;
     border-radius: 3px;
     box-shadow: var(--shadow);
+    position: absolute;
 }
 
 .slide-info > h2 {
